# trackresults

./: README.md  main.py  pyproject.toml  result.py  results_parser.py
src/track_results/: commandline_main.py  main.py  result.py  results_parser.py  streamlit_app.py
